# stratified-dataset-splitter

./: .gitignore  README.md  config.py  main.py  pyproject.toml  splitter.py
